...
                  backgroundColor: Colors.white, // 设置文字颜色
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(10), // 设置圆角大小
                  ),
                  padding: const EdgeInsets.symmetric(vertical: 16), // 增加按钮的高度
                ),
                child: const Text('Send Offer'),
              ),
            ),
            Expanded(
              // 使用Expanded让按钮填充可用空间
              child: TextButton(
                onPressed: () {
...
                  backgroundColor: AppColor.myColor, // 设置文字颜色
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(10), // 设置圆角大小
                  ),
                  padding: const EdgeInsets.symmetric(vertical: 16), // 增加按钮的高度
                ),
                child: const Text('Chat'),
              ),
            ),
          ],
        ),
      ),
    );
...
